--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles-h5.css" type="text/css">
-    <link rel="stylesheet" type="css" href="style.css"  type="text/css">
+    <!-- <link rel="stylesheet" type="css" href="style.css"  type="text/css"> -->
     <title>Theme Builder</title>
   </head>
   <body>
